--- a/apps/backend/src/i18n/pt/translations.json
+++ b/apps/backend/src/i18n/pt/translations.json
@@ -4,5 +4,6 @@
     "fileTooLarge": "O tamanho máximo do arquivo é {maxSize}",
     "invalidTextExtraction": "Incapaz de processar o texto, error: {error}"
   },
-  "questionPrompt": "Gere uma pergunta de entrevista para a habilidade '{skill}'. Por favor, inicie e finalize a pergunta com '{skill} -'"
+  "questionPrompt": "Gere uma pergunta de entrevista para a habilidade '{skill}'. Por favor, inicie e finalize a pergunta com '{skill} -'",
+  "nlpContext": "Você é um modelo de extração de entidades altamente preciso."
 }
