--- a/apps/backend/src/i18n/pt/translations.json
+++ b/apps/backend/src/i18n/pt/translations.json
@@ -5,5 +5,6 @@
     "invalidTextExtraction": "Incapaz de processar o texto, error: {error}"
   },
   "questionPrompt": "Gere uma pergunta de entrevista para a habilidade '{skill}'. Por favor, inicie e finalize a pergunta com '{skill} -'",
-  "nlpContext": "Você é um modelo de extração de entidades altamente preciso."
+  "nlpContext": "Você é um modelo de extração de entidades altamente preciso.",
+  "nlpPrompt": "Extraia habilidades ou títulos relevantes do seguinte currículo do candidato no idioma {lang}:"
 }
